# saucerbot

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  .travis.yml  Bakefile  CLAUDE.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  README.rst  app.json  docker-compose.yml  docker_build.sh  docker_push.sh  gunicorn.conf.py  heroku.yml  index.yaml  locustfile.py  logging.yaml  manage.py  package-lock.json  package.json  promote.sh  pyproject.toml  requirements.txt  serverless.yml  setup.cfg  setup.py  sonar-project.properties  zappa_settings.yml
.github/workflows/: build-deploy.yml  ci.yml  helm-release.yml  test.yml
charts/saucerbot/: Chart.yaml  values.yaml
charts/saucerbot/templates/: NOTES.txt  _helpers.tpl  ingress.yaml  serviceaccount.yaml
charts/saucerbot/templates/backend/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
charts/saucerbot/templates/discord-bot/: _helpers.tpl  deployment.yaml
config/: logging.yaml
discord/: Procfile
docker/: build.sh  install.sh  install_build.sh  install_runtime.sh
elastic-apm/: Dockerfile  apm-server.yml  deploy.sh  docker_build.sh
hooks/: build
requirements/: testing.txt
saucerbot/: __init__.py  app.py  asgi.py  barely.py  bridgestone.py  cli.py  commands.py  database.py  flask.py  handlers.py  janet.py  logging.py  models.py  parsers.py  routing.py  the_dores.py  urls.py  utils.py  views.py  wsgi.py
saucerbot/core/: apps.py  authentication.py  models.py  routers.py  serializers.py  urls.py  views.py
saucerbot/core/static/saucerbot/: home.css
saucerbot/core/templates/rest_framework/: api.html
saucerbot/core/templates/saucerbot/: home.html
saucerbot/core/templatetags/: saucerbot.py
saucerbot/discord/: __main__.py  admin.py  apps.py  authentication.py  cli.py  client.py  http.py  main.py  models.py  overrides.py  permissions.py  serializers.py  state.py  urls.py  utils.py  views.py
saucerbot/discord/migrations/: 0001_initial_tables.py  0002_rename_nickname.py  0003_add_slugs.py  0004_remove_slugs.py  0005_big_auto_field.py
saucerbot/groupme/: __init__.py  admin.py  apps.py  attachments.py  authentication.py  custom.py  handlers.py  models.py  negotiation.py  parsers.py  permissions.py  routers.py  serializers.py  urls.py  views.py
saucerbot/groupme/handlers/: __init__.py  general.py  saucer.py  vandy.py
saucerbot/groupme/management/commands/: loadbrews.py  loadnicknames.py  messagestats.py  pr.py  remind.py
saucerbot/groupme/migrations/: 0001_initial.py  0001_initial_tables.py  0002_historicalnickname.py  0002_optimize_indices.py  0003_multiple_bots.py  0003_nickname_fix.py  0003_rename_sauceruser.py  0004_big_auto_field.py  0004_multiple_bots.py  0005_optimize_indices.py
saucerbot/groupme/templates/admin/: base_site.html
saucerbot/groupme/templates/rest_framework/: api.html
saucerbot/groupme/templatetags/: saucerbot.py
saucerbot/groupme/utils/: __init__.py  barely.py  gmi.py  janet.py
saucerbot/handlers/: __init__.py  general.py  saucer.py  vandy.py
saucerbot/resources/: er_words.txt  stopwords.txt
saucerbot/resources/elasticsearch/templates/: brews.json
saucerbot/settings/: __init__.py  base.py  dev.py  email.py  logging.py  test.py
saucerbot/settings/environments/: build.py  development.py  production.py  staging.py  test.py
saucerbot/utils/: __init__.py  base.py  bridgestone.py  parsers.py  the_dores.py  time_utils.py
saucerbot/utils/sports/: basketball.py  espn.py  football.py  models.py  schedule_page_utils.py
terraform/: main.tf
terraform/vpc/: _input.tf  _output.tf  config.tf  route_tables.tf  subnets.tf
test_resources/: event-time-sample.html  events-sample.html  new-arrivals.html  sample_schedule_page.html
tests/: conftest.py  test_brews.py  test_commands.py  test_discord_client.py  test_handlers.py  test_models.py  test_parser.py  test_parsers.py  test_serializers.py  test_sports_schedule.py  test_the_dores.py  test_views.py
tests/sports/: test_football.py  test_sports_schedule.py
uploads/: Dockerfile
